fix: Update button alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -497,7 +497,7 @@ body {
 }
 .prev-btn {
     margin-right: auto;
-    display: flex !important;
+    display: flex;
     flex-direction: row-reverse;
 }
 
